Fixed header, added locations and footer

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
                 <img id="logo-image" src="./images/img-tea-cozy-logo.webp" alt="Tea Cozy logo">
             </div>
             <nav>
-                <span><a href="">Mission</a></span>
-                <span><a href="">Featured Tea</a></span>
-                <span><a href="">Locations</a></span>
+                <span><a href="#mission">Mission</a></span>
+                <span><a href="#tea-month">Featured Tea</a></span>
+                <span><a href="#locations">Locations</a></span>
             </nav>
         </header>
         <div class="content">
@@ -46,9 +46,43 @@
                     </div>
                     <div class="item">
                         <img class="item-image" src="./images/img-bedford-bizarre.webp" alt="Bedford Bizarre Tea">
+                        <span>Bedford Bizarre Tea</span>
                     </div>
                 </div>
             </div>
+            <div id="locations">
+                <div id="location-heading">
+                    <h2>Locations</h2>
+                </div>
+                <div class="location" id="downtown">
+                    <h3>Downtown</h3>
+                    <span>384 W.4th St.</span><br>
+                    <span>Suite 108</span><br>
+                    <span>Portland, Maine</span>
+                </div>
+                <div class="location" id="easy-bayside">
+                    <h3>Easy Bayside</h3>
+                    <span>3433 Phiserman's Ave</span><br>
+                    <span>NW Corner</span><br>
+                    <span>Portland, Maine</span>
+                </div>
+                <div class="location" id="oakdale">
+                    <h3>Oakdale</h3>
+                    <span>515 Crescent Ave.</span><br>
+                    <span>2nd Floor</span><br>
+                    <span>Portland, Maine</span>
+                </div>
+            </div>
         </div>
+        <footer>
+            <div id="contact">
+                <h1>The Tea Cozy</h1>
+                <h5>contact@theteacozy.com</h5>
+                <h6>917-555-8904</h6>
+            </div>
+            <div id="copyright">
+                <h6>&copy; The Tea Cozy 2017</h6>
+            </div>
+        </footer>
     </body>
 </html>
